--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=6600
-DB_URL="host=localhost user=postgres password=postgres dbname=newdb port=5432 sslmode=disable TimeZone=Asia/Shanghai"
+DB_URL="host=localhost user=postgres password=postgres dbname=libman port=5432 sslmode=disable TimeZone=Asia/Shanghai"
 SECRET=dsdfvndfsukjdsvn5222dvujsvcx55
